# centre

./: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Centre.cpp  Centre.h  CentreIException.cpp  CentreIException.h  CentreStdio.cpp  CentreStdio.h  Constants.h  Convergance.cpp  Convergence.h  CoordinateInfo.h  Discretizer.cpp  Discretizer.h  Discretizer_mpi.cpp  EntropyCalculator.cpp  EntropyCalculator.h  EntropyCalculator_mpi.cpp  EntropyScorer.cpp  EntropyScorer.h  Estimators.cpp  Estimators.h  Exceptions.h  Inputs.cpp  Inputs.h  Makefile  Makefile.am  Makefile.in  MpiCommTags.h  NetcdfFile.cpp  NetcdfFile.h  Netcdf_BAT.cpp  Netcdf_BAT.h  Netcdf_EntContri.cpp  Netcdf_EntContri.h  Netcdf_HistUtils.cpp  Netcdf_HistUtils.h  Netcdf_TrjInt.cpp  Netcdf_TrjInt.h  Real2Int.cpp  Real2Int.h  Timer.cpp  (+10 more)
src/.deps/: Centre.Po  CentreIException.Po  CentreStdio.Po  Convergance.Po  Discretizer.Po  Discretizer_mpi.Po  EntropyCalculator.Po  EntropyCalculator_mpi.Po  EntropyScorer.Po  Estimators.Po  Inputs.Po  NetcdfFile.Po  Netcdf_BAT.Po  Netcdf_EntContri.Po  Netcdf_HistUtils.Po  Netcdf_TrjInt.Po  Real2Int.Po  Utils.Po  main_common.Po  main_mpi.Po  main_smp.Po
src/macrologger/: macrologger.h
test_examples/: clean-as-dist.sh
test_examples/example-1/: 0O.lig.gas.leap.prmtop  README  cart2bat.inp
test_examples/example-1/inpfiles/: centre-histogram-inp.cfg  centre-inp.cfg  centre-vonmiseskde-inp.cfg
test_examples/example-1/outfiles-h-ref/: MIE-ML_convergence_b-30.csv  MIST-ML_convergence_b-30.csv  Tree-MIST-ML_b-30_s-0.csv  Tree-MIST-ML_b-30_s-1.csv  Tree-MIST-ML_b-30_s-2.csv  Tree-MIST-ML_b-30_s-3.csv  bin_angles.nc  bin_bonds.nc  bin_torsions.nc  entcontri_ad-2d.nc  entcontri_ang-1d.nc  entcontri_ang-2d.nc  entcontri_ba-2d.nc  entcontri_bd-2d.nc  entcontri_bnd-1d.nc  entcontri_bnd-2d.nc  entcontri_tor-1d.nc  entcontri_tor-2d.nc  progress-1.info
test_examples/example-1/outfiles-v-ref/: MIST-ML_convergence_b-3.csv  Tree-MIST-ML_b-3_s-0.csv  Tree-MIST-ML_b-3_s-1.csv  Tree-MIST-ML_b-3_s-2.csv  Tree-MIST-ML_b-3_s-3.csv  progress-1.info  vmkde_torsions_minimas.out
test_examples/example-2/: 3ZWZ.lig.gas.leap.prmtop  README  cart2bat.inp
test_examples/example-2/inpfiles/: centre-histogram-inp.cfg  centre-inp.cfg  centre-vonmiseskde-inp.cfg
test_examples/example-2/outfiles-h-ref/: MIE-ML_convergence_b-30.csv  MIST-ML_convergence_b-30.csv  Tree-MIST-ML_b-30_s-0.csv  Tree-MIST-ML_b-30_s-1.csv  Tree-MIST-ML_b-30_s-2.csv  Tree-MIST-ML_b-30_s-3.csv  entcontri_ad-2d.nc  entcontri_ang-1d.nc  entcontri_ang-2d.nc  entcontri_ba-2d.nc  entcontri_bd-2d.nc  entcontri_bnd-1d.nc  entcontri_bnd-2d.nc  entcontri_tor-1d.nc  entcontri_tor-2d.nc  hist_tor-1d.nc  progress-1.info
test_examples/example-2/outfiles-v-ref/: MIE-ML_convergence_b-3.csv  MIE-ML_convergence_b-30.csv  MIST-ML_convergence_b-3.csv  MIST-ML_convergence_b-30.csv  Tree-MIST-ML_b-30_s-0.csv  Tree-MIST-ML_b-30_s-1.csv  Tree-MIST-ML_b-30_s-2.csv  Tree-MIST-ML_b-30_s-3.csv  Tree-MIST-ML_b-3_s-0.csv  Tree-MIST-ML_b-3_s-1.csv  Tree-MIST-ML_b-3_s-2.csv  Tree-MIST-ML_b-3_s-3.csv  progress-1.info  vmkde_torsions_minimas.out
